--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   <meta name="description" content="Photo editing website" />
   <title>Blockly Demo</title>
   <!-- <script type="text/javascript" src="caman.full.min.js"></script> -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400&display=swap" rel="stylesheet">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.min.js"></script>
 </head>
 
