--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <script type="text/javascript" src="scripts/script.js"></script>
 </head>
 
-<body>
+<body class="navbar-padding">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
